--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "@oclif/command",
-  "description": "oclif base command",
-  "version": "1.5.14",
-  "author": "Jeff Dickey @jdxcode",
-  "bugs": "https://github.com/oclif/command/issues",
+  "name": "alto-command",
+  "description": "alto-clif base command",
+  "version": "0.9.0",
+  "oclif-version": "1.5.14",
+  "author": "柏大衛",
+  "oclif-author": "Jeff Dickey @jdxcode",
+  "bugs": "https://github.com/bodawei/alto-command/issues",
   "dependencies": {
     "@oclif/errors": "^1.2.2",
     "@oclif/parser": "3.8.1",
@@ -36,9 +38,10 @@
     "/flush.js",
     "/lib"
   ],
-  "homepage": "https://github.com/oclif/command",
+  "homepage": "https://github.com/bodawei/alto-command",
   "keywords": [
-    "oclif"
+    "oclif",
+    "alto-oclif"
   ],
   "license": "MIT",
   "main": "lib/index.js",
@@ -48,7 +51,7 @@
       "@oclif/plugin-plugins"
     ]
   },
-  "repository": "oclif/command",
+  "repository": "bodawei/alto-command",
   "scripts": {
     "build": "rm -rf lib && tsc",
     "lint": "tsc -p test --noEmit && tslint -p test -t stylish",
