--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alto-command",
   "description": "alto-clif base command",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "oclif-version": "1.5.14",
   "author": "柏大衛",
   "oclif-author": "Jeff Dickey @jdxcode",
@@ -14,13 +14,13 @@
   },
   "devDependencies": {
     "@oclif/config": "1.13.0",
-    "@oclif/plugin-help": "2.2.0",
     "@oclif/plugin-plugins": "1.7.8",
     "@oclif/tslint": "^3.1.1",
     "@types/chai": "^4.1.7",
     "@types/mocha": "5.2.7",
     "@types/node": "^10.12.24",
     "@types/semver": "^5.5.0",
+    "alto-plugin-help": "^0",
     "chai": "^4.2.0",
     "cli-ux": "^5.1.0",
     "conventional-changelog-cli": "2.0.21",
@@ -47,7 +47,7 @@
   "main": "lib/index.js",
   "oclif": {
     "devPlugins": [
-      "@oclif/plugin-help",
+      "alto-plugin-help",
       "@oclif/plugin-plugins"
     ]
   },
