--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "alto-command",
   "description": "alto-clif base command",
-  "version": "0.9.3",
-  "oclif-version": "1.5.14",
+  "version": "0.9.4",
+  "oclif-version": "1.5.15",
   "author": "柏大衛",
   "oclif-author": "Jeff Dickey @jdxcode",
   "bugs": "https://github.com/bodawei/alto-command/issues",
@@ -30,6 +30,9 @@
     "ts-node": "^8.0.3",
     "tslint": "5.17.0",
     "typescript": "^3.3.3333"
+  },
+  "peerDependencies": {
+    "@oclif/config": "^1"
   },
   "engines": {
     "node": ">=8.0.0"
