--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "alto-command",
   "description": "alto-clif base command",
-  "version": "0.9.4",
-  "oclif-version": "1.5.15",
+  "version": "0.9.5",
+  "oclif-version": "1.5.16",
   "author": "柏大衛",
   "oclif-author": "Jeff Dickey @jdxcode",
   "bugs": "https://github.com/bodawei/alto-command/issues",
@@ -32,7 +32,8 @@
     "typescript": "^3.3.3333"
   },
   "peerDependencies": {
-    "@oclif/config": "^1"
+    "@oclif/config": "^1",
+    "alto-plugin-help": "^0"
   },
   "engines": {
     "node": ">=8.0.0"
