--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "alto-command",
   "description": "alto-clif base command",
   "version": "0.9.5",
-  "oclif-version": "1.5.16",
+  "oclif-version": "1.5.18",
   "author": "柏大衛",
   "oclif-author": "Jeff Dickey @jdxcode",
   "bugs": "https://github.com/bodawei/alto-command/issues",
   "dependencies": {
+    "@oclif/config": "1.13.0",
     "@oclif/errors": "^1.2.2",
-    "@oclif/parser": "3.8.1",
+    "@oclif/parser": "3.8.3",
+    "alto-plugin-help": "^0",
     "debug": "^4.1.1",
     "semver": "^5.6.0"
   },
