--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "alto-command",
   "description": "alto-clif base command",
-  "version": "0.9.5",
-  "oclif-version": "1.5.18",
+  "version": "0.9.7",
+  "oclif-version": "1.5.19",
   "author": "柏大衛",
   "oclif-author": "Jeff Dickey @jdxcode",
   "bugs": "https://github.com/bodawei/alto-command/issues",
   "dependencies": {
-    "@oclif/config": "1.13.0",
+    "@oclif/config": "^1",
     "@oclif/errors": "^1.2.2",
     "@oclif/parser": "3.8.3",
     "alto-plugin-help": "^0",
@@ -15,7 +15,7 @@
     "semver": "^5.6.0"
   },
   "devDependencies": {
-    "@oclif/config": "1.13.0",
+    "@oclif/config": "^1",
     "@oclif/plugin-plugins": "1.7.8",
     "@oclif/tslint": "^3.1.1",
     "@types/chai": "^4.1.7",
