--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "alto-command",
   "description": "alto-clif base command",
-  "version": "0.9.7",
-  "oclif-version": "1.5.19",
+  "version": "0.9.8",
+  "oclif-version": "1.5.20",
   "author": "柏大衛",
   "oclif-author": "Jeff Dickey @jdxcode",
   "bugs": "https://github.com/bodawei/alto-command/issues",
@@ -15,9 +15,7 @@
     "semver": "^5.6.0"
   },
   "devDependencies": {
-    "@oclif/config": "^1",
-    "@oclif/plugin-plugins": "1.7.8",
-    "@oclif/tslint": "^3.1.1",
+    "@oclif/plugin-plugins": "^1.7.7",
     "@types/chai": "^4.1.7",
     "@types/mocha": "5.2.7",
     "@types/node": "^10.12.24",
@@ -25,12 +23,14 @@
     "alto-plugin-help": "^0",
     "chai": "^4.2.0",
     "cli-ux": "^5.1.0",
-    "conventional-changelog-cli": "2.0.21",
+    "conventional-changelog-cli": "^2.0.12",
+    "eslint": "^6.6.0",
+    "eslint-config-oclif": "^3.1.0",
+    "eslint-config-oclif-typescript": "^0.1.0",
     "fancy-test": "^1.4.3",
     "globby": "^9.0.0",
     "mocha": "6.1.4",
     "ts-node": "^8.0.3",
-    "tslint": "5.17.0",
     "typescript": "^3.3.3333"
   },
   "peerDependencies": {
@@ -60,11 +60,12 @@
   "repository": "bodawei/alto-command",
   "scripts": {
     "build": "rm -rf lib && tsc",
-    "lint": "tsc -p test --noEmit && tslint -p test -t stylish",
-    "posttest": "yarn run lint",
+    "lint": "eslint . --ext .ts --config .eslintrc",
+    "posttest": "yarn lint",
     "prepublishOnly": "yarn run build",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
+    "pretest": "tsc -p test --noEmit"
   },
   "types": "lib/index.d.ts",
   "resolutions-notes": {
